--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,29 +1,23 @@
-name: .NET CI
+name: .NET
 
 on:
   push:
     branches: [ "main" ]
-  schedule:
-    - cron: '0 * * * *'  # Executa a cada hora
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-
     - name: Restore dependencies
       run: dotnet restore
-
-    - name: Build project
+    - name: Build
       run: dotnet build --no-restore
-
-    - name: Run tests (custom script)
-      run: dotnet test --no-build --verbosity normal
