--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: .NET Build and Run
 
 on:
   push:
@@ -12,12 +12,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore github4women/github4women.csproj
+
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build github4women/github4women.csproj --no-restore
+
+    - name: Run app
+      run: dotnet run --project github4women/github4women.csproj
+
