--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,4 +1,4 @@
-name: .NET Build and Run
+name: .NET Build
 
 on:
   push:
@@ -8,24 +8,20 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout do código
+        uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
+      - name: Instalar .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
 
-    - name: Restore dependencies
-      run: dotnet restore github4women/github4women.csproj
+      - name: Restaurar dependências
+        run: dotnet restore github4women/github4women.csproj
 
-    - name: Build
-      run: dotnet build github4women/github4women.csproj --no-restore
-
-    - name: Run app
-      run: dotnet run --project github4women/github4women.csproj
+      - name: Compilar o projeto
+        run: dotnet build github4women/github4women.csproj --no-restore
 
